creusot/tests/should_fail/prusti/blocked_lifetime/clause2.stderr
error[creusot]: invalid mut dereference of expression with home `'old` and lifetime `'a` at time-slice `'curr`
 --> clause2.rs:4:12
  |
4 | #[ensures(*x == 0u32)]
  |            ^

error: aborting due to previous error

